Basic Authentication added
